<resources>
    <string name="app_name">Rick and Morty App</string>
    <string name="character_image">Character image</string>
    <string name="filter">filter</string>
    <string name="retry">Retry</string>
    <string name="no_results">No results</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="location">Location:</string>
    <string name="origin">Origin:</string>
    <string name="species">Species:</string>
    <string name="type">Type:</string>
    <string name="loading">Loading…</string>
    <string name="unknown">Unknown</string>
    <string name="characters">Characters</string>
</resources>